# svc-auth

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.e2e  Dockerfile.e2e.dockerignore  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.e2e.yml  docker-compose.yml
.githooks/: commit-msg  pre-commit
.github/workflows/: cd.yml  ci.yml
charts/br-svc-auth/: Chart.yaml  README.md  values-local.yaml  values.yaml
charts/br-svc-auth/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
crates/br-auth-conformance-test/: CHANGELOG.md  Cargo.toml  README.md
crates/br-auth-conformance-test/anchor/: .gitignore  go.mod  key.go  main.go  sealed.go
crates/br-auth-conformance-test/src/: anchor.rs  error.rs  fixture.rs  kv.rs  lib.rs  outcome.rs  wire.rs
crates/br-auth-conformance-test/tests/: conformance.rs
crates/br-auth-contract/: CHANGELOG.md  Cargo.toml  README.md
crates/br-auth-contract/src/: destination.rs  entry.rs  error.rs  key.rs  lib.rs  seal.rs
crates/br-auth-identity-util/: CHANGELOG.md  Cargo.toml  README.md
crates/br-auth-identity-util/src/: error.rs  lib.rs  publisher.rs
crates/br-auth-identity-util/tests/: published_language.rs
scripts/: publish.sh  setup-branch-protection.sh
scripts/e2e/: down.sh  run.sh  up.sh
scripts/lib/: build-cross-amd64.sh  build-cross-arm64.sh  build-native-release.sh  check.sh  common.sh  test.sh
src/: auth_check.rs  bearer_validator.rs  config.rs  cookie.rs  error.rs  health.rs  jwt.rs  lib.rs  logout.rs  main.rs  oidc_validator.rs  refresh.rs  refresh_store.rs  rotation.rs  token.rs
tests/: bearer_pl.rs  e2e.rs  rotation_cas.rs
