[package]
name = "svc-auth"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }


# Messaging (NATS KV for refresh tokens + bearer validation)
async-nats = "0.48"

# Shared cross-service contracts (bearer-token KV key, session cookie name)
br-core-auth = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-auth", tag = "v0.8.0" }

# Shared observability (structured JSON logging, /livez, /metrics) + readiness gate (/readyz)
br-util-observability = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-observability", tag = "v0.8.0" }
br-util-axum-readiness = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-axum-readiness", tag = "v0.8.0" }

# Types & utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dotenvy = "0.15"
sha2 = "0.10"
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }

[package.metadata.cargo-machete]
ignored = ["reqwest"]
