[package]
name = "svc-auth"
description = "Portable, infra-light authentication gatekeeper: multi-provider OIDC id_token to internal JWT (HttpOnly cookies), refresh-token rotation with reuse detection, and bearer-token validation over NATS KV (no database)."
version = "0.4.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/BotResources/svc-auth"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

async-nats = "0.48"

br-core-auth = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-auth", tag = "v0.10.0", version = "0.10.0" }

br-util-observability = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-observability", tag = "v0.10.0", version = "0.10.0" }
br-util-axum-readiness = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-axum-readiness", tag = "v0.10.0", version = "0.10.0" }

uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dotenvy = "0.15"
sha2 = "0.10"
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }

[package.metadata.cargo-machete]
ignored = ["reqwest"]
