[workspace]
members = [
    "crates/br-auth-contract",
    "crates/br-auth-conformance-test",
    "crates/br-auth-identity-util",
]
resolver = "3"

[package]
name = "svc-auth"
description = "Portable, infra-light authentication gatekeeper: multi-provider OIDC id_token to internal JWT (HttpOnly cookies), refresh-token rotation with reuse detection, and bearer-token validation over NATS KV (no database)."
version = "1.0.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/BotResources/svc-auth"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

async-nats = "0.48"

br-core-auth = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-auth", tag = "v1.0.2", version = "1.0.2" }
br-core-kernel = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-kernel", tag = "v1.0.2", version = "1.0.2" }

br-util-nats-fabric = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-nats-fabric", tag = "v1.0.2", version = "1.0.2" }
br-util-observability = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-observability", tag = "v1.0.2", version = "1.0.2" }
br-util-axum-readiness = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-axum-readiness", tag = "v1.0.2", version = "1.0.2" }

br-auth-contract = { path = "crates/br-auth-contract", version = "0.1.0" }

uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dotenvy = "0.15"
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
br-test-harness = { git = "https://github.com/BotResources/br-e2e-harness", package = "br-test-harness", tag = "v1.0.1", version = "1.0.1", default-features = false, features = [
    "oidc",
    "spawned-nats",
    "nats",
    "nats-fabric",
    "http-client",
] }
br-auth-identity-util = { path = "crates/br-auth-identity-util", version = "0.1.0" }
async-nats = "0.48"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }
