[package]
name = "br-auth-contract"
description = "Frozen wire contract for publishing bearer credentials to svc-auth over the shared PUBLISHED_LANGUAGE KV bucket: the sealed-envelope format, the cleartext payload, the KV key builder, and the AEAD seal/open functions."
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/BotResources/svc-auth"

[dependencies]
br-core-auth = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-auth", tag = "v1.0.2", version = "1.0.2" }
br-core-kernel = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-kernel", tag = "v1.0.2", version = "1.0.2" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
base64 = "0.22"
thiserror = "2"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
